<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.personagensrpg.DetalhesPersonagemActivity">

    <ImageView
        android:id="@+id/imageViewPersonagem"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        app:srcCompat="@drawable/anao" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personagem_nome"
        android:layout_below="@+id/imageViewPersonagem"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textViewRaca"
        android:layout_alignStart="@+id/textViewRaca" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personagem_raca" />

    <TextView
        android:id="@+id/textViewRaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textViewIdade"
        android:layout_alignStart="@+id/textViewIdade" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRaca"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personagem_idade" />

    <TextView
        android:id="@+id/textViewIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewIdade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personagem_ataque" />

    <TextView
        android:id="@+id/textViewAtaque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewRaca"
        android:layout_alignStart="@+id/textViewRaca"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAtaque"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personagem_defesa" />

    <TextView
        android:id="@+id/textViewDefesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
